--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,17 +1,17 @@
 site_name: ドキュメント！！！
 
 theme:
-  name: "readthedocs"
+  name: "material"
   palette:
     primary: orange
     accent: otange
 
 plugins:
-  - mkdocstrings:
-      default_handler: python
-      handlers:
-          python:
-              rendering:
-                  show_source: false  
-      watch:
-          - src/fox
+    - mkdocstrings:
+        default_handler: python
+        handlers:
+            python:
+                rendering:
+                    show_source: false  
+        watch:
+            - src/fox
